# Password-Manager-CLI

./: .env.exemple  Cargo.toml  README.md  diesel.toml
migrations/2024-11-18-211648_create_passwords/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/commands/: decrypt.rs  delete_post.rs  encrypt.rs  generator.rs  mod.rs  research_post.rs  show_posts.rs  write_post.rs
