[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
aes = "0.8.4"
aes-gcm = "0.10.3"
diesel = { version = "2.2.5", features = ["chrono", "sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
diesel-derive-enum = { version = "2", features = ["sqlite"] }
diesel_migrations = { version = "2.2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }


